<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.presentation.home.HomeFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.presentation.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.presentation.notifications.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.presentation.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@+id/navigation_login"
            app:popUpToInclusive="true"/>
    </fragment>
</navigation>