<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/textView"
            style="@style/Screen_Title"
            android:text="@string/title_login"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/line_1" />

        <LinearLayout
            android:id="@+id/login_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <TextView
                style="@style/Edittext_Title"
                android:text="@string/email" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="@color/dark_grey"
                app:cardCornerRadius="32dp"
                app:strokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="10dp" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                style="@style/Edittext_Title"
                android:text="@string/password" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="@color/dark_grey"
                app:cardCornerRadius="32dp"
                app:strokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="10dp" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@drawable/button_state_selector"
            app:layout_constraintTop_toBottomOf="@id/login_info" />

        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/no_account"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/registration"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/enter"
            app:layout_constraintTop_toBottomOf="@+id/enter" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registration"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:minHeight="0dp"
            android:paddingHorizontal="0dp"
            android:paddingVertical="0dp"
            android:text="@string/registration"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/no_account"
            app:layout_constraintEnd_toEndOf="@+id/enter"
            app:layout_constraintStart_toEndOf="@+id/no_account"
            app:layout_constraintTop_toTopOf="@+id/no_account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="0dp"
            android:paddingHorizontal="0dp"
            android:paddingVertical="0dp"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/no_account" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:dividerColor="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@id/forgot_password" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/vk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/blue"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_vk"
            app:iconGravity="textStart"
            app:iconSize="0dp"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toStartOf="@id/ok"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/orange_gradient"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_ok"
            app:iconGravity="textStart"
            app:iconSize="0dp"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vk"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
